9/18/10 get rid of PropertiesIO class, what it was doing was trivial and only used in one place
9/18/10 #2492, move all related code to new translationutility.jar package
9/15/10 #2492, phase 2: move jar localization code to JarFactory (lightly tested)
9/15/10 #2492, move more general jar function to JarUtil
# 2.09.00 (44031) Sep 13, 2010
9/9/10 #2463, Java sim fix: missing strings should be left blank, not populated with English
9/9/10 #2463, fix: use type=java in simulation.properties for Java sim test jars
9/9/10 #2497, use better/consistent variable names in createTestJar methods
9/9/10 remove '_' prefix in member data names for older code, so that convention is the same throughout
9/9/10 converted ArrayLists to use generics
9/9/10 #2492, first phase: prepare code related to jar creation for migration to phetcommon (not completed, not fully tested)
8/30/10 #2463, add simulation.properties support for all sim, which facilitates multiple sims per Flash project
8/30/10 change all Logger messages to level "info"
7/13/10 #2406, ensure that main frame size doesn't exceed primary display size
7/13/10 #2421, update URLs that changed with move to wicket-based website
7/13/10 #2436, consolidate all URLs and email addresses in TUConstants
7/13/10 fix contractions (eg "don't") in HTML strings that weren't rendering correctly 
5/28/10 #1506, problems with log4j, changed logging to java.util.logging
5/28/10 adhoc logging replaced with log4j by JO
4/1/10 changed "Brazilian Portuguese" to "Portuguese, Brazil" to be consistent with website (see #2250)
# 2.08.00 (39581) Apr 1, 2010
4/1/10 added locale "es_CO" for "Spanish, Colombia" (see #2244)
# 2.07.00 (39060) Mar 3, 2010
3/3/10 deprecate locale "no", it's the same as "nb" (see #2146)
# 2.06.00 (37959) Jan 8, 2010
1/8/10 fixes for languages that use preferred font + preferred font for Georgian
# 2.05.02 (37958) Jan 8, 2010
1/8/10 fix: use preferred font for target text areas, broken in eariler changes